feat(Note): add Authorization in every controller.